--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
+    "@types/react-helmet": "^6.1.9",
     "apexcharts": "^3.44.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1",
